added category endpoints
