# src/models/category-model.ts
@@ -1,0 +1,6 @@
+export default interface Category {
+    id?: number,
+    idPreference?: number,
+    name?: string,
+    keyWord?: string,
+}
