# src/models/models.ts
@@ -2,10 +2,12 @@ import User from './user'
 import UserLogin from './user-login'
 import Preference from './prefence'
 import Rating from './rating-model'
+import Category from './category-model'
 
 export {
     User,
     UserLogin,
     Preference,
     Rating,
+    Category,
 }
